css/main.css
@font-face {
	font-family: Yarnball;
	src:url(../fonts/yarnball.ttf);
	font-weight: normal;
}

* { margin: 0; padding: 0;}
html, body { height: 100%; width: 100%; }
canvas, { display: block; }

body, button {
	font-family: yarnball, arial, sans-serif;
	text-transform: uppercase;
}

html, body {
	background-color: #333;
	color: white;
	font-size: 20px;
	height:100%;
}



#wrapper {
	width: 320px;
	position: relative;
	margin: 0 auto;
	margin-top: 50px;
}

#gameUI {
	position: absolute;
	top: 0;
	width: 100%;
	height: 420px;
	background-color: #000000;
	color: #000000;
	display: none;
}

#battleUI {
	display: none;
}

#battle-enemyUI {
	width: 50%;
	top: 0;
	position: absolute;
	border-bottom-right-radius: 6px;
	background-color: white;
	border: 2px solid black;
	border-top: 0;
	border-left: 0;
	padding: 6px 15px;
}

#battle-enemyUI div:first-of-type, #battle-playerUI div:first-of-type {
	margin-bottom: 3px;
}

#enemy-hpWrapper, #player-hpWrapper {
	height: 12px;
	background-color: gray;
	display: inline-block;
	width: 80%;
	position: relative;
}

#enemy-hp, #player-hp {
	height: inherit;
	width: 100%;
	background-color: black;
	position: absolute;
	-moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
}

.text {
	width: 20%;
	float: right;
	text-align: right;
}

#enemy-level, #player-level {
	font-weight: bold;
}

#battle-enemyGraphics {
	height: 150px;
	width: 150px;
	position: absolute;
	right: 5%;
	top: 8%;
	background: url('../media/monster-flower.png') no-repeat right bottom;
}

#battle-playerUI {
	width: 50%;
	bottom: 20%;
	right: 0;
	position: absolute;
	background-color: white;
	border-top-left-radius: 6px;
	border: 2px solid black;
	border-right: 0;
	border-bottom: 0;
	padding: 6px;
	padding-left: 15px;
}

#battle-playerGraphics {
	height: 150px;
	width: 150px;
	bottom: 20%;
	left: 5%;
	position: absolute;
	background: url('../media/monster-puppy.png') no-repeat left bottom;
}

#battle-boxUI {
	height: 20%;
	width: 100%;
	bottom: 0;
	position: absolute;
	background-color: black;
}

#battle-boxMessage {
	position: absolute;
	margin: 1.8%;
	width: 96%;
	height: 85%;
	padding: 10px;
	background-color: white;
	-moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
	display: none;
}

#fightButton, #runButton {
	border-radius: 0;
	width: 46%;
	padding: 10px;
	margin: 1.8%;
	float: left;
	height: 85%;
	font-size: 20px;
	background-color: white;
	-webkit-appearance: none;
	-moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
}

#battleUI {
	background-color: white;
	width: inherit;
	height: inherit;
}


#errorUI {
	margin-top: 34%;
	padding: 10px 0;
	width: 100%;
	font-size: 20px;
	display: none;
	text-align: center;
	color: red;
}

@media (max-width:640px) {
	#wrapper {
		margin-top: 0;
	}
}

